[project]
name = "astrbot-plugin-markdown-text-renderer"
version = "0.1.3"
description = "Render LLM Markdown output into plain text or ASCII-friendly text for AstrBot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown-it-py>=3.0.0",
    "wcwidth>=0.2.13",
]

[tool.uv]
package = false
